package calculator.domain;

public enum CalculatorStatus {
    READY,
    ERR
}
